@startuml Deployment_03_DatabaseSchema

title Deployment-Diagramm Teil 3 - Datenbank-Struktur

package "PostgreSQL Database: wissentest" {
    entity "users" as USERS {
        id : SERIAL [PK]
        username : VARCHAR(100)
        email : VARCHAR(255)
        password_hash : VARCHAR(256)
        password_salt : VARCHAR(128)
        role : VARCHAR(32)
        reset_requested : BOOLEAN
        created_at : TIMESTAMP
    }
    
    entity "questions" as QUESTIONS {
        id : SERIAL [PK]
        type : VARCHAR(16)
        prompt : TEXT
        difficulty : SMALLINT
        points : INTEGER
        category : VARCHAR(64)
        image_url : VARCHAR(255)
        created_by : INTEGER [FK]
        created_at : TIMESTAMP
    }
    
    entity "answers" as ANSWERS {
        id : SERIAL [PK]
        question_id : INTEGER [FK]
        answer_text : TEXT
        is_correct : BOOLEAN
        partial_value : NUMERIC
    }
    
    entity "cloze_answers" as CLOZE {
        id : SERIAL [PK]
        question_id : INTEGER [FK]
        token_index : SMALLINT
        expected_text : TEXT
        partial_value : NUMERIC
    }
    
    entity "attempts" as ATTEMPTS {
        id : SERIAL [PK]
        user_id : INTEGER [FK]
        total_points : NUMERIC
        max_points : NUMERIC
        difficulty : SMALLINT
        grade : VARCHAR(10)
        duration_seconds : INTEGER
        created_at : TIMESTAMP
    }
    
    entity "attempt_answers" as ATTEMPT_ANSWERS {
        id : SERIAL [PK]
        attempt_id : INTEGER [FK]
        question_id : INTEGER [FK]
        given_answer : TEXT
        points_awarded : NUMERIC
    }
    
    entity "question_images" as IMAGES {
        id : SERIAL [PK]
        content_type : VARCHAR(128)
        data : BYTEA
        created_at : TIMESTAMP
    }
    
    entity "config" as CONFIG {
        key : VARCHAR(128) [PK]
        value : VARCHAR(255)
        description : TEXT
    }
}

' Relationships
USERS ||--o{ QUESTIONS : "creates"
USERS ||--o{ ATTEMPTS : "performs"
QUESTIONS ||--o{ ANSWERS : "has"
QUESTIONS ||--o{ CLOZE : "has"
QUESTIONS ||--o{ ATTEMPT_ANSWERS : "referenced_in"
ATTEMPTS ||--o{ ATTEMPT_ANSWERS : "contains"

note right of USERS
  **Users Tabelle:**
  - Speichert Schüler/Admin
  - Passwort gehashed
  - Rollen-Verwaltung
  - Reset-Anfragen-Flag
end note

note right of QUESTIONS
  **Questions Tabelle:**
  - Alle Testfragen
  - MC / CLOZE / FREE / IMAGE
  - Schwierigkeit 1-3
  - Kategorie-Support
end note

note right of ANSWERS
  **Answers (MC Optionen):**
  - Antwortoptionen
  - is_correct Flag
  - Partial-Value für Teilpunkte
end note

note right of CLOZE
  **Cloze Tokens:**
  - Lückentext-Lösungen
  - Token-Index für Position
  - Expected-Text Vergleich
end note

note right of ATTEMPTS
  **Attempts (Testversuche):**
  - Speichert jeden Testversuch
  - Gesamtpunkte & Max-Punkte
  - Berechnete Note
  - Dauer des Tests
end note

note right of ATTEMPT_ANSWERS
  **Attempt-Answers:**
  - Detail zu jeder Antwort
  - Benutzer-Antwort vs. Punkte
  - Für Feedback & Analyse
end note

@enduml
